<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendeeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:layout_marginTop="60dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/description"
                android:textColor="#000"
                android:textSize="19dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/EditTextName"
                android:layout_height="wrap_content"
                android:hint="@string/nom"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:layout_marginTop="20dp">
            </EditText>

            <EditText
                android:id="@+id/EditTextSurname1"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </EditText>

            <EditText
                android:id="@+id/EditTextDni"
                android:layout_height="wrap_content"
                android:hint="@string/dni"
                android:layout_width="fill_parent">
            </EditText>

            <TextView
                android:id="@+id/txtFchNacim"
                android:layout_width="fill_parent"
                android:layout_height="52dp"
                android:hint="@string/fNacim"
                android:textSize="19dp"></TextView>

            <TextView
                android:id="@+id/txtFchInsc"
                android:layout_width="fill_parent"
                android:layout_height="49dp"
                android:hint="@string/fInsc"
                android:textSize="19dp">

            </TextView>

            <EditText
                android:id="@+id/EditTextEmail"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="fill_parent">
            </EditText>

            <EditText
                android:id="@+id/EditPhone"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:layout_width="fill_parent">
            </EditText>

            <Button
                android:id="@+id/send"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="#790808"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="5dp"
                android:text="Enviar"
                android:textColor="#FFF" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
